--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,24 @@ body
     padding: 0;
 
 }
+
+#cabecera
+{
+    background-color: blue;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0,0,0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
