--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #334;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -11,12 +12,18 @@ body
 
 #cabecera
 {
-    background-color: blue;
+    background-color: blue url("imagenes/img.jpg");
     box-shadow: 0px 5px 30px 0px rgba(0, 0,0,0.75);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -38,4 +45,10 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    background-color: aliceblue;
+    padding: 1em;
 }
